--- a/video.html
+++ b/video.html
@@ -27,7 +27,7 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="indeks.html">Početna</a></li>
+                <li><a href="index.html">Početna</a></li>
                 <li><a href="o_meni.html">O meni</a></li>
                 <li><a href="vjezbe.html">Vježbe</a></li>
             </ul>
