--- a/o_meni.html
+++ b/o_meni.html
@@ -19,7 +19,7 @@
             <br> Uz sve to volim i provoditi vrijeme sa svojim prijateljima, ići u izlaske i probavat nove stvari.</p>
             <img src="slike/slika2.jpg" width="200" height="250">
             <img src="slike/slika1.jpg" width="200" height="250">
-            <img src="slike/slika3.JPG" width="200" height="250">
+            <img src="slike/slika3.jpg" width="200" height="250">
 			<br> <a href=https://www.youtube.com/watch?v=PPmha4Pk89A"" target="_blank">Moja najdraža pjesma :) </a></br>
         </section>
     </main>
