--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body class="home-background">
     <header>
-        <h1 class="nikavukadin">Nika Vukadin</h1><h1 style="text-align: center;"
-        <h2>Kolegij Digitalni multimedij 1</h2>
+	
+        <h1 class="nikavukadin">Nika Vukadin</h1>
+		<h2 style="text-align: center;">
+        Kolegij Digitalni multimedij 1</h2>
     </header>
     <main>
         <p>Pozdrav svima!<br> Zovem se Nika Vukadin.</br> Dobrodošli na moju web stranicu!<br> Ovdje ćete pronaći kolekciju mojih radova i projekata.
