--- a/vjezbe.html
+++ b/vjezbe.html
@@ -47,7 +47,9 @@
 			<img src="vjezbe/projektni2.jpg"width="350" hight="400">
 			<h4>Vježba 8</h4>
             <p class="opis-vjezbi">Ova vježba se bavi osnovama obrade video materijala i uvođenjem multimedije u video projekt.</p>
-			<img src="vjezbe/nika8.gif" width="350" hight="400">
+			
+			<video width="350" height="400" controls>
+  <source src="vjezbe/nika88.mp4" type="video/mp4">
 <h4>Vježba 9</h4>			
 <img src="posebni.mp4" width="350" hight="400">
 
