--- a/o_meni.html
+++ b/o_meni.html
@@ -8,7 +8,7 @@
 </head>
 <body class="about-background">
     <header>
-        <h1>Nika Vukadin</h1>
+        <h1 class="nikavukadin">Nika Vukadin</h1>
         <h2>Kolegij Digitalni multimedij 1</h2>
     </header>
     <main>
@@ -19,7 +19,7 @@
             <br> Uz sve to volim i provoditi vrijeme sa svojim prijateljima, ići u izlaske i probavat nove stvari.</p>
             <img src="slike/slika2.jpg" width="200" height="250">
             <img src="slike/slika1.jpg" width="200" height="250">
-            <img src="slike/slika3.jpg" width="200" height="250">
+            <img src="slike/slikica.jpeg" width="200" height="250">
 			<br> <a href=https://www.youtube.com/watch?v=PPmha4Pk89A"" target="_blank">Moja najdraža pjesma :) </a></br>
         </section>
     </main>
